--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<meta name="author" content="ayoub amzil"/>
-		<meta name="description" content="This is a website for a NONEXISTENT travel agency (Around the World Travels Agency)"/>
+		<meta name="description" content="This is a website for a NONEXISTENT travel agency (The Purple Sunset Travels Agency)"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>Home</title>
 		<link rel="shortcut icon" href="images/favicon.png">
